--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,19 @@
 }
 .item.active {
   display: block;
+  animation-name: animation;
+  animation-duration: 1s;
 }
+
+@keyframes animation {
+    from {
+      opacity: 0.5;
+    }
+    to {
+      opacity: 1;
+    }
+}
+
 .thumb {
   height: 20%;
 }
